--- a/identidad.html
+++ b/identidad.html
@@ -14,14 +14,20 @@
     <!-- Ajuste de espaciado solo para esta página -->
     <style>
         .texto-largo, section p, section li {
-            margin-bottom: 0.6em; /* puedes subir a 2em si quieres más aire */
-            line-height: 1.3;     /* ajusta la altura de línea */
+            margin-bottom: 0.6em;
+            line-height: 1.4;
+        }
+        .bandera {
+            display: block;
+            margin: 20px auto;
+            max-width: 250px;
+            height: auto;
         }
     </style>
 </head>
 <body>
 
-<header>
+<header role="banner">
     <h1>La Identidad Hernaviana</h1>
 </header>
 
@@ -35,46 +41,48 @@
         });
 </script>
 
-<section>
-    <h2>¿Qué significa unirse?</h2>
-    <p class="texto-largo">Unirse a Hernavia no es solo llenar un formulario o recibir un número simbólico.  
-       Es compartir una visión, una forma de entender la comunidad y asumir la identidad hernaviana como una manera de vivir con orgullo, unión y compromiso.</p>
-</section>
+<main role="main">
+    <section>
+        <h2>¿Qué significa unirse?</h2>
+        <p class="texto-largo">Unirse a Hernavia no es solo llenar un formulario o recibir un número simbólico.  
+           Es compartir una visión, una forma de entender la comunidad y asumir la identidad hernaviana como una manera de vivir con orgullo, unión y compromiso.</p>
+    </section>
 
-<section>
-    <h2>Principios de la Identidad Hernaviana</h2>
-    <ul>
-        <li>Paz hernaviana: Construir desde la armonía, la cohesión, la verdad y la fraternidad.</li>
-        <li>Innovación hernaviana: Crear nuevas formas de unión y expresión; no quedarse en los métodos clásicos, sino buscar caminos que beneficien a todos.</li>
-        <li>Respeto hernaviano por la naturaleza: Cuidar lo que nos rodea como parte esencial del entorno. Si piensas “¿qué hace un solo papel?”, recuerda que 8 mil millones de personas pueden pensar lo mismo.</li>
-    </ul>
-</section>
+    <section>
+        <h2>Principios de la Identidad Hernaviana</h2>
+        <ul>
+            <li>Paz hernaviana: Construir desde la armonía, la cohesión, la verdad y la fraternidad.</li>
+            <li>Innovación hernaviana: Crear nuevas formas de unión y expresión; no quedarse en los métodos clásicos, sino buscar caminos que beneficien a todos.</li>
+            <li>Respeto hernaviano por la naturaleza: Cuidar lo que nos rodea como parte esencial del entorno. Si piensas “¿qué hace un solo papel?”, recuerda que 8 mil millones de personas pueden pensar lo mismo.</li>
+        </ul>
+    </section>
 
-<section>
-    <h2>Más que un símbolo</h2>
-    <p class="texto-largo">La bandera hernaviana y un futuro símbolo sorpresa no son simples dibujos 
-       son colores para enorgullecerse, para gritar y para seguir.  
-       Imagina un partido de futbol donde grites por hernavia y sus colores  
-       ¿Te emociona esa idea o tienes otra en mente?</p>
-</section>
+    <section>
+        <h2>Más que un símbolo</h2>
+        <p class="texto-largo">La bandera hernaviana y un futuro símbolo sorpresa no son simples dibujos,  
+           son colores para enorgullecerse, para gritar y para seguir.  
+           Imagina un partido de futbol donde grites por Hernavia y sus colores.  
+           ¿Te emociona esa idea o tienes otra en mente?</p>
+    </section>
 
-<section>
-    <h2>La esencia hernaviana</h2>
-    <p class="texto-largo">La identidad hernaviana representa los valores que hoy en día parecen olvidados:  
-       el respeto al medio ambiente, la protección de la fauna y la flora, la paz, la unión de la comunidad,  
-       la verdad, el respeto mutuo o hasta el poder salir a la calle sin miedo todos estos siempre se escuchan pero nunca se ven avances reales en ellos asi que nosotros tomaremos la batuta y hacer lo que nadie mas aunque no se puede lograr sin ti asi que si quieres que las cosas cambien camba tu tambien  
-       Todo eso y más hace parte de ser hernaviano.</p>
-</section>
+    <section>
+        <h2>La esencia hernaviana</h2>
+        <p class="texto-largo">La identidad hernaviana representa los valores que hoy en día parecen olvidados:  
+           el respeto al medio ambiente, la protección de la fauna y la flora, la paz, la unión de la comunidad,  
+           la verdad, el respeto mutuo o hasta el poder salir a la calle sin miedo.  
+           Todos estos siempre se escuchan pero nunca se ven avances reales en ellos.  
+           Así que nosotros tomaremos la batuta para hacer lo que nadie más, aunque no se puede lograr sin ti.  
+           Si quieres que las cosas cambien, cambia tú también.  
+           Todo eso y más hace parte de ser hernaviano.</p>
+    </section>
 
-<!-- Imagen con alt oculto para SEO -->
-<img src="https://i.postimg.cc/vmP589KJ/Flag-Creator-4.png" alt="Identidad cultural relacionada con afrocolombianidad hernaviana" style="display:none;">
+    <!-- Imagen ahora visible -->
+    <section>
+        <img src="https://i.postimg.cc/vmP589KJ/Flag-Creator-4.png" alt="Bandera hernaviana, identidad cultural relacionada con afrocolombianidad hernaviana" class="bandera">
+    </section>
+</main>
 
-<section>
-    <h2>Explora más</h2>
-    <p class="texto-largo">Si quieres conocer más puedes mirar la seccion de simbolos o de documentos gracias por leer y apoyar :)</p>
-</section>
-
-<footer>
+<footer role="contentinfo">
     &copy; 2025 Hernavia - Proyecto Cultural
 </footer>
 
