--- a/identidad.html
+++ b/identidad.html
@@ -7,11 +7,9 @@
     <meta name="description" content="Explora la Identidad Hernaviana, sus valores, símbolos y principios culturales. Relacionado con la afrocolombianidad hernaviana como concepto cultural.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Comentario SEO: esta página también se relaciona con 'afrocolombianidad hernaviana' -->
 
-    <link rel="stylesheet" href="estilo.css"> <!-- tu CSS global -->
+    <link rel="stylesheet" href="estilo.css"> 
 
-    <!-- Ajuste de espaciado solo para esta página -->
     <style>
         .texto-largo, section p, section li {
             margin-bottom: 0.6em;
@@ -76,8 +74,8 @@
            Todo eso y más hace parte de ser hernaviano.</p>
     </section>
 
-    <!-- Imagen ahora visible -->
     <section>
+       <p> Recuerdala talvez un dia no puedas olvidarla </p>
         <img src="https://i.postimg.cc/vmP589KJ/Flag-Creator-4.png" alt="Bandera hernaviana, identidad cultural relacionada con afrocolombianidad hernaviana" class="bandera">
     </section>
 </main>
