--- a/sugerencias.html
+++ b/sugerencias.html
@@ -98,10 +98,10 @@
         <!-- Frase con icono -->
         <div class="frase-futuro">
             <img src="puedenideas.png" alt="Icono ideas">
-            <span>¿Puedes cambiar el futuro?</span>
+        ¿Puedes cambiar el futuro?
         </div>
 
-        <button class="audio-boton" onclick="document.getElementById('audio-futuro').play()">▶ Escuchar</button>
+        <button class="audio-boton" onclick="document.getElementById('audio-futuro').play()">▶ ¿?</button>
         <audio id="audio-futuro" src="futuro.mp3"></audio>
 
         <!-- Formulario -->
