--- a/noticias-random.html
+++ b/noticias-random.html
@@ -33,7 +33,7 @@
 <main>
     <section id="noticias-dia">
         <h2>Noticias del día</h2>
-        <p>Hoy <strong>1 de octubre de 2025</strong> Feliz nuevo mes.</p>
+        <p>Hoy 1 de octubre de 2025 feliz mes de octubre, el resto de la existencia por si mañana no puedo festejar el nuevo dia.</p>
     </section>
 
     <section id="noticias-mundo">
