--- a/comounirse.html
+++ b/comounirse.html
@@ -120,10 +120,10 @@
         <label for="correo">Correo electrónico:</label>
         <input type="email" id="correo" name="correo" required>
 
-        <label for="edad">Edad:</label>
+        <label for="edad">Fecha de Nacimiento:</label>
         <input type="number" id="edad" name="edad" min="1" max="120" required>
 
-        <label for="ciudad">País / Ciudad:</label>
+        <label for="ciudad">País/Ciudad/Municipio:</label>
         <input type="text" id="ciudad" name="ciudad" required>
 
         <label for="ocupacion">Ocupación (opcional):</label>
