--- a/head.html
+++ b/head.html
@@ -3,5 +3,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="favicono.png">
   <link rel="stylesheet" href="estilo.css">
-</head>
 
+  <meta name="description" content="Hernavia - Proyecto cultural y simbólico con documentos, noticias, símbolos y más. Descubre nuestra identidad y cómo unirte.">
+</head>
