--- a/sugerencias.html
+++ b/sugerencias.html
@@ -93,7 +93,7 @@
     </script>
 
     <section class="section">
-        <p>Si encuentras errores, tienes sugerencias o ideas para mejorar Hernavia, por favor no dudes en enviarnos un mensaje:</p>
+        <p>Si encuentras errores, tienes sugerencias o ideas para mejorar Hernavia o simplemente una pregunta, por favor no dudes en enviarnos un mensaje:</p>
 
         <!-- Frase con icono -->
         <div class="frase-futuro">
