--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hernavia – Nación Simbólica y Comunidad</title>
-    <meta name="description" content="Descubre Hernavia, la micronación colombiana donde creatividad, comunidad y cultura se unen para un futuro sostenible.">
+    <title>Hernavia</title>
+    <meta name="description" content="Descubre Hernavia, una identidad colombiana donde creatividad, comunidad y cultura se unen por un futuro sostenible.">
     <link rel="icon" type="image/png" href="favicono.png">
     <link rel="stylesheet" href="estilo.css">
 </head>
@@ -15,7 +15,6 @@
         <h1>Hernavia</h1>
     </header>
 
-    <!-- Navegación principal cargada por JS -->
     <div id="nav-placeholder"></div>
 
     <noscript>
@@ -72,3 +71,4 @@
 
 </body>
 </html>
+
