--- a/documentos.html
+++ b/documentos.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Hernavia</title>
+    <title>Documentacion de Hernavia</title>
+     <meta name="description" content="Descrubre los documentos iniciales de Hernavia para saber en que se rige todo este proyecto"
     <div id="head-placeholder"></div>
     <script>
         fetch('head.html')
