--- a/carta.html
+++ b/carta.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <title>Carta Fundacional - Hernavia</title>
+    <meta name="description" content="Esta carta nos muestra la columna de Hernavia con los principios basicos e informacion impresindible util para saber bien que es de forma un poco mas seria
     <div id="head-placeholder"></div>
     <script>
         fetch('head.html')
@@ -11,7 +12,6 @@
             });
     </script>
     <style>
-        /* Ajuste mínimo para esta página */
         section.carta {
             line-height: 1.6;
             text-align: justify;
