--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <section id="bandera">
         <h2>Bandera</h2>
-        <img src="https://i.postimg.cc/vmP589KJ/Flag-Creator-4.png" alt="Bandera Hernavia" class="bandera">
+<img src="img/bandera.png" alt="Bandera Hernavia" class="bandera">
     </section>
 
     <section id="significado">
@@ -71,4 +71,5 @@
 
 </body>
 </html>
+
 
