--- a/head.html
+++ b/head.html
@@ -2,10 +2,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" href="favicono.png">
+  <link rel="icon" href="favicono.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="favicono.png" type="image/png" sizes="16x16">
+  <link rel="shortcut icon" href="favicono.png" type="image/png">
 
   <link rel="preconnect" href="https://i.postimg.cc" crossorigin>
   <link rel="preconnect" href="https://hernavia.github.io" crossorigin>
-
   <link rel="preload" href="estilo.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 </head>
