--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <section id="bandera">
         <h2>Bandera</h2>
-<img src="img/bandera.png" alt="Bandera Hernavia" class="bandera">
+<img src="img/bandera.png" alt="Bandera Hernavia" class="bandera" width="300" height="200">
     </section>
 
     <section id="significado">
@@ -71,5 +71,6 @@
 
 </body>
 </html>
+
 
 
