--- a/carta.html
+++ b/carta.html
@@ -103,7 +103,7 @@
 
         <h3>Artículo 6 – Símbolos</h3>
         <h4>Bandera</h4>
-        <img src="https://i.postimg.cc/vmP589KJ/Flag-Creator-4.png" alt="Bandera Hernavia" class="bandera">
+      <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera" width="300" height="200">
         <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
 
         <p><strong>Arconte fundador:</strong> Hernán Coronado.</p>
