--- a/simbolos.html
+++ b/simbolos.html
@@ -44,7 +44,7 @@
     <main class="simbolos-section">
         <section>
             <h2>Bandera</h2>
-            <img src="https://i.postimg.cc/vmP589KJ/Flag-Creator-4.png" alt="Bandera de Hernavia" class="bandera">
+           <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera" width="300" height="200">
             <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
         </section>
 
