--- a/identidad.html
+++ b/identidad.html
@@ -76,7 +76,7 @@
 
     <section>
        <p> Recuerdala talvez un dia no puedas olvidarla </p>
-        <img src="https://i.postimg.cc/vmP589KJ/Flag-Creator-4.png" alt="Bandera hernaviana, identidad cultural relacionada con afrocolombianidad hernaviana" class="bandera">
+<img src="img/bandera.png" alt="Bandera Hernavia" class="bandera" width="300" height="200" alt="Bandera hernaviana, identidad cultural relacionada con afrocolombianidad hernaviana" class="bandera">
     </section>
 </main>
 
