--- a/noticias-random.html
+++ b/noticias-random.html
@@ -30,22 +30,20 @@
         });
 </script>
 
-<main>
-    <section id="noticias-dia">
-        <h2>Noticias del día</h2>
-        <p>Hoy 1 de octubre de 2025 feliz mes de octubre, el resto de la existencia por si mañana no puedo festejar el nuevo dia.</p>
-    </section>
+<section id="noticias-dia">
+    <h2>Noticias del día</h2>
+    <p>Hoy 1 de octubre de 2025 feliz mes de octubre, el resto de la existencia por si mañana no puedo festejar el nuevo día.</p>
+</section>
 
-    <section id="noticias-mundo">
-        <h2>Noticias del mundo</h2>
-        <p>Hoy no hay nada interesante.</p>
-    </section>
+<section id="noticias-mundo">
+    <h2>Noticias del mundo</h2>
+    <p>Hoy no hay nada interesante.</p>
+</section>
 
-    <section id="curiosidades">
-        <h2>Curiosidades Random</h2>
-        <p>Aquí se mostrarán curiosidades, datos curiosos o cualquier noticia fuera de lo común.</p>
-    </section>
-</main>
+<section id="curiosidades">
+    <h2>Curiosidades Random</h2>
+    <p>Aquí se mostrarán curiosidades, datos curiosos o cualquier noticia fuera de lo común.</p>
+</section>
 
 <footer>
     <p>&copy; 2025 Hernavia - Proyecto Cultural</p>
