--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Hernavia</title>
     <meta name="description" content="Descubre Hernavia, una identidad colombiana donde creatividad, comunidad y cultura se unen por un futuro sostenible.">
     <link rel="icon" type="image/png" href="favicono.png">
+    <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
+    
+    <!-- Mejora SEO -->
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Proyecto Hernavia">
 </head>
 
 <body>
@@ -15,8 +20,8 @@
         <h1>Hernavia</h1>
     </header>
 
+    <!-- Carga navegación con fallback -->
     <div id="nav-placeholder"></div>
-
     <noscript>
         <nav class="nav-comun">
             <a href="index.html">Inicio</a>
@@ -31,46 +36,52 @@
     </noscript>
 
     <script>
+        // Cargar navegación de forma asíncrona
         fetch('nav.html')
-        .then(response => response.text())
-        .then(data => {
-            document.getElementById('nav-placeholder').innerHTML = data;
-        });
+            .then(response => {
+                if (!response.ok) throw new Error('Error al cargar la navegación');
+                return response.text();
+            })
+            .then(data => {
+                document.getElementById('nav-placeholder').innerHTML = data;
+            })
+            .catch(error => console.error(error));
     </script>
 
-    <section id="que-es">
-        <h2>¿Qué es Hernavia?</h2>
-        <p>Más que un proyecto, Hernavia es un espacio donde la creatividad y la unión se convierten en identidad y tu puedes ayudar a cambiar la historia.</p>
-        <p>Se fundamenta en los principios del respeto y cuidado por la naturaleza, la protección de los animales, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales. Además,   Hernavia impulsa la innovación, apoyando nuevos proyectos y fomentando un espíritu creativo en la sociedad para encontrar soluciones reales a los retos actuales.</p> 
-        <p>Al mismo tiempo, promueve la unión y el bienestar de la comunidad, buscando que cada persona se sienta segura y parte de un entorno que la valora.</p>
-        <p>En resumen, la identidad hernaviana se sostiene sobre la naturaleza, la paz y la innovación.</p>
-    </section>
+    <main>
+        <section id="que-es" class="texto-largo">
+            <h2>¿Qué es Hernavia?</h2>
+            <p>Más que un proyecto, Hernavia es un espacio donde la creatividad y la unión se convierten en identidad y tú puedes ayudar a cambiar la historia.</p>
+            <p>Se fundamenta en los principios del respeto y cuidado por la naturaleza, la protección de los animales, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales. Además, Hernavia impulsa la innovación, apoyando nuevos proyectos y fomentando un espíritu creativo en la sociedad para encontrar soluciones reales a los retos actuales.</p>
+            <p>Al mismo tiempo, promueve la unión y el bienestar de la comunidad, buscando que cada persona se sienta segura y parte de un entorno que la valora.</p>
+            <p>En resumen, la identidad hernaviana se sostiene sobre la naturaleza, la paz y la innovación.</p>
+        </section>
 
-    <section id="donde">
-        <h2>¿Dónde se encuentra?</h2>
-        <p>Hernavia nace en Colombia, específicamente en el municipio Gachancipá, donde puedes encontrar sus proyectos y toda su administración, aún en etapa inicial.</p>
-    </section>
+        <section id="donde">
+            <h2>¿Dónde se encuentra?</h2>
+            <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde puedes encontrar sus proyectos y toda su administración, aún en etapa inicial.</p>
+        </section>
 
-    <section id="bandera">
-        <h2>Bandera</h2>
-<img src="img/bandera.png" alt="Bandera Hernavia" class="bandera" width="300" height="200">
-    </section>
+        <section id="bandera">
+            <h2>Bandera</h2>
+            <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" width="300" height="200" loading="lazy">
+        </section>
 
-    <section id="significado">
-        <h2>Significado de los colores</h2>
-        <ul>
-            <li><strong>Verde:</strong> Representa la naturaleza y su tono particular simboliza también la innovación.</li>
-            <li><strong>Blanco:</strong> Simboliza la paz, cohesión, unión y fraternidad.</li>
-            <li><strong>Amarillo:</strong> Representa las raíces con Colombia.</li>
-        </ul>
-    </section>
-    
+        <section id="significado">
+            <h2>Significado de los colores</h2>
+            <ul>
+                <li><strong>Verde:</strong> Representa la naturaleza y su tono particular simboliza también la innovación.</li>
+                <li><strong>Blanco:</strong> Simboliza la paz, cohesión, unión y fraternidad.</li>
+                <li><strong>Amarillo:</strong> Representa las raíces con Colombia.</li>
+            </ul>
+        </section>
+    </main>
+
     <footer>
         &copy; 2025 Hernavia - Proyecto Cultural
     </footer>
 
 </body>
 </html>
-
 
 
