--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <h1>Hernavia</h1>
     </header>
 
-    <!-- Navegación estática -->
+    <!-- Nav incrustado -->
     <nav class="nav-comun">
         <a href="index.html">Inicio</a>
-        <a href="documentos.html">Documentos</a>
+        <a href="Documentos.html">Documentos</a>
         <a href="noticias.html">Noticias</a>
         <a href="proyectos.html">Proyectos</a>
         <a href="simbolos.html">Símbolos</a>
@@ -66,4 +66,3 @@
 
 </body>
 </html>
-
