--- a/documentos.html
+++ b/documentos.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Documentacion de Hernavia</title>
-     <meta name="description" content="Descrubre los documentos iniciales de Hernavia para saber en que se rige todo este proyecto"
-    <div id="head-placeholder"></div>
-    <script>
-        fetch('head.html')
-            .then(response => response.text())
-            .then(data => {
-                document.head.innerHTML += data;
-            });
-    </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Documentación de Hernavia</title>
+    <meta name="description" content="Descubre los documentos iniciales de Hernavia para saber en qué se rige este proyecto.">
+    <link rel="icon" type="image/png" href="favicono.png">
+    <link rel="preload" href="estilo.css" as="style">
+    <link rel="stylesheet" href="estilo.css">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Proyecto Hernavia">
 </head>
 
 <body>
@@ -18,61 +17,35 @@
         <h1>Documentos de Hernavia</h1>
     </header>
 
-<div id="nav-placeholder"></div>
+    <!-- Nav incrustado -->
+    <nav class="nav-comun">
+        <a href="index.html">Inicio</a>
+        <a href="Documentos.html">Documentos</a>
+        <a href="noticias.html">Noticias</a>
+        <a href="proyectos.html">Proyectos</a>
+        <a href="simbolos.html">Símbolos</a>
+        <a href="comounirse.html">¿Cómo unirse?</a>
+        <a href="sugerencias.html">Sugerencias</a>
+        <a href="noticias-random.html">Noticias Random</a>
+    </nav>
 
-<script>
-fetch('nav.html')
-.then(response => response.text())
-.then(data => {
-    document.getElementById('nav-placeholder').innerHTML = data;
-});
-</script>
+    <main>
+        <section class="section">
+            <h2>Carta Fundacional</h2>
+            <p>La Carta Fundacional de Hernavia es un documento corto, pensado como la base de nuestra identidad y organización. Funciona como una “constitución” inicial que guía los pasos del proyecto mientras crece y se consolida.</p>
+            <p>En ella se establece al Arconte como máxima autoridad, encargado de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan instituciones más amplias. También recoge los principios fundamentales, como el respeto entre ciudadanos, el cuidado de la naturaleza, la participación activa, la búsqueda de innovación y la fraternidad con otras culturas.</p>
+            <p>Además, describe las obligaciones de los ciudadanos, que incluyen aportar al desarrollo de la comunidad, respetar las decisiones colectivas, defender la paz y contribuir al progreso común. Señala también objetivos iniciales como impulsar la innovación, proteger el medio ambiente, fomentar la educación cívica y promover un desarrollo económico propio.</p>
+            <p>La Carta dedica un espacio a los símbolos de Hernavia, en especial la bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. Finalmente, aclara que se trata de un documento transitorio que podría transformarse en un futuro en una carta más completa.</p>
+            <a href="carta.html" class="boton-hernavia">Leer carta completa</a>
+        </section>
 
-    <section class="section">
-        <h2>Carta Fundacional</h2>
-        <p>
-            La Carta Fundacional de Hernavia es un documento corto, pensado como 
-            la base de nuestra identidad y organización. Funciona como una “constitución” inicial 
-            que guía los pasos del proyecto mientras crece y se consolida.
-        </p>
-        <p>
-            En ella se establece al Arconte como máxima autoridad, encargado 
-            de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan 
-            instituciones más amplias. También recoge los principios fundamentales, 
-            como el respeto entre ciudadanos, el cuidado de la naturaleza, la participación activa, 
-            la búsqueda de innovación y la fraternidad con otras culturas.
-        </p>
-        <p>
-            Además, describe las obligaciones de los ciudadanos, que incluyen 
-            aportar al desarrollo de la comunidad, respetar las decisiones colectivas, defender 
-            la paz y contribuir al progreso común. Señala también objetivos iniciales
-            como impulsar la innovación, proteger el medio ambiente, fomentar la educación cívica 
-            y promover un desarrollo económico propio.
-        </p>
-        <p>
-            La Carta dedica un espacio a los símbolos de Hernavia, en especial la 
-            bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. 
-            Finalmente, aclara que se trata de un documento transitorio que podría transformarse en un futuro en una carta más completa.
-        </p>
-        <a href="carta.html" class="boton">Leer carta completa</a>
-    </section>
-
-    <section class="section">
-        <h2>Leyes Transitorias</h2>
-        <p>
-            Las Leyes Transitorias de Hernavia son un conjunto de normas provisionales 
-            que guían el funcionamiento de la comunidad mientras se consolida la organización. 
-            Establecen cómo se puede revocar la ciudadanía, el aporte obligatorio de cada ciudadano, 
-            las penalizaciones por incumplimiento, la participación en votaciones y asambleas, 
-            la administración de fondos y la eliminación de datos personales en casos de renuncia.
-        </p>
-        <p>
-            Estas leyes buscan mantener la unidad, proteger la naturaleza, fomentar la innovación 
-            y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, 
-            siempre respetando los principios de respeto, paz, innovación y unión.
-        </p>
-        <a href="leyes.html" class="boton">Leer las leyes completas</a>
-    </section>
+        <section class="section">
+            <h2>Leyes Transitorias</h2>
+            <p>Las Leyes Transitorias de Hernavia son un conjunto de normas provisionales que guían el funcionamiento de la comunidad mientras se consolida la organización. Establecen cómo se puede revocar la ciudadanía, el aporte obligatorio de cada ciudadano, las penalizaciones por incumplimiento, la participación en votaciones y asambleas, la administración de fondos y la eliminación de datos personales en casos de renuncia.</p>
+            <p>Estas leyes buscan mantener la unidad, proteger la naturaleza, fomentar la innovación y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, siempre respetando los principios de respeto, paz, innovación y unión.</p>
+            <a href="leyes.html" class="boton-hernavia">Leer las leyes completas</a>
+        </section>
+    </main>
 
     <footer>
         &copy; 2025 Hernavia - Proyecto Cultural
