--- a/carta.html
+++ b/carta.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carta Fundacional - Hernavia</title>
-    <meta name="description" content="Esta carta nos muestra la columna de Hernavia con los principios basicos e informacion impresindible util para saber bien que es de forma un poco mas seria
-    <div id="head-placeholder"></div>
-    <script>
-        fetch('head.html')
-            .then(response => response.text())
-            .then(data => {
-                document.head.innerHTML += data;
-            });
-    </script>
+    <meta name="description" content="Esta carta nos muestra la columna de Hernavia con los principios básicos e información imprescindible para conocer Hernavia de forma seria.">
+    <link rel="icon" type="image/png" href="favicono.png">
+    <link rel="preload" href="estilo.css" as="style">
+    <link rel="stylesheet" href="estilo.css">
+
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Proyecto Hernavia">
     <style>
         section.carta {
+            min-height: 600px; /* evita CLS por contenido largo */
             line-height: 1.6;
             text-align: justify;
             padding: 20px;
@@ -26,6 +27,15 @@
         section.carta h2, section.carta h3, section.carta h4 {
             color: #006A44;
         }
+        .bandera {
+            display: block;
+            width: 300px;
+            height: auto;
+            aspect-ratio: 3/2;
+            margin: 15px auto;
+            border: 4px solid #006A44;
+            border-radius: 8px;
+        }
     </style>
 </head>
 
@@ -34,83 +44,89 @@
         <h1>Carta Fundacional de Hernavia</h1>
     </header>
 
-    <div id="nav-placeholder"></div>
-    <script>
-        fetch('nav.html')
-        .then(response => response.text())
-        .then(data => {
-            document.getElementById('nav-placeholder').innerHTML = data;
-        });
-    </script>
+    <!-- Nav incrustado -->
+    <nav class="nav-comun">
+        <a href="index.html">Inicio</a>
+        <a href="Documentos.html">Documentos</a>
+        <a href="noticias.html">Noticias</a>
+        <a href="proyectos.html">Proyectos</a>
+        <a href="simbolos.html">Símbolos</a>
+        <a href="comounirse.html">¿Cómo unirse?</a>
+        <a href="sugerencias.html">Sugerencias</a>
+        <a href="noticias-random.html">Noticias Random</a>
+    </nav>
 
-    <section class="carta">
-        <h2>Preámbulo</h2>
-        <p>
-            Nosotros, el pueblo hernaviano, declaramos nuestra unión en una sola comunidad, guiados por los principios
-            de respeto, justicia, innovación, progreso y fraternidad.
-        </p>
+    <main>
+        <section class="carta">
+            <h2>Preámbulo</h2>
+            <p>
+                Nosotros, el pueblo hernaviano, declaramos nuestra unión en una sola comunidad, guiados por los principios
+                de respeto, justicia, innovación, progreso y fraternidad.
+            </p>
 
-        <h3>Artículo 1 – Liderazgo</h3>
-        <p>
-            El Arconte, cargo ejercido inicialmente por el fundador, será la máxima autoridad de Hernavia.
-            Tendrá poder total para tomar decisiones administrativas, políticas y sociales
-            mientras Hernavia consolida sus instituciones.
-            El Arconte estará sujeto a esta Carta y deberá velar por la unión y el bienestar del pueblo hernaviano.
-        </p>
+            <h3>Artículo 1 – Liderazgo</h3>
+            <p>
+                El Arconte, cargo ejercido inicialmente por el fundador, será la máxima autoridad de Hernavia.
+                Tendrá poder total para tomar decisiones administrativas, políticas y sociales
+                mientras Hernavia consolida sus instituciones.
+                El Arconte estará sujeto a esta Carta y deberá velar por la unión y el bienestar del pueblo hernaviano.
+            </p>
 
-        <h3>Artículo 2 – Principios Fundamentales</h3>
-        <ol>
-            <li>Respeto y dignidad hacia los demás ciudadanos.</li>
-            <li>Respeto y cuidado de la naturaleza y los recursos comunes.</li>
-            <li>Participación activa en votaciones, asambleas o eventos convocados por Hernavia.</li>
-            <li>Solidaridad con los demás hernavianos en momentos de necesidad.</li>
-            <li>Búsqueda constante del conocimiento, la innovación y el progreso comunitario.</li>
-            <li>Fraternidad con otras naciones y culturas, manteniendo la identidad hernaviana.</li>
-        </ol>
+            <h3>Artículo 2 – Principios Fundamentales</h3>
+            <ol>
+                <li>Respeto y dignidad hacia los demás ciudadanos.</li>
+                <li>Respeto y cuidado de la naturaleza y los recursos comunes.</li>
+                <li>Participación activa en votaciones, asambleas o eventos convocados por Hernavia.</li>
+                <li>Solidaridad con los demás hernavianos en momentos de necesidad.</li>
+                <li>Búsqueda constante del conocimiento, la innovación y el progreso comunitario.</li>
+                <li>Fraternidad con otras naciones y culturas, manteniendo la identidad hernaviana.</li>
+            </ol>
 
-        <h3>Artículo 3 – Obligaciones de los Ciudadanos</h3>
-        <ol>
-            <li>Aportar a la comunidad mediante trabajo, servicio, recursos o conocimiento útil.</li>
-            <li>Cumplir y respetar las decisiones del Arconte, como máxima autoridad provisional.</li>
-            <li>Defender la paz y rechazar la violencia injustificada.</li>
-            <li>Contribuir al desarrollo económico y social de Hernavia mediante la productividad y el esfuerzo propio.</li>
-            <li>Respetar los símbolos de Hernavia como expresión de identidad común.</li>
-            <li>Proteger y apoyar a su comunidad en situaciones de crisis o emergencia.</li>
-        </ol>
+            <h3>Artículo 3 – Obligaciones de los Ciudadanos</h3>
+            <ol>
+                <li>Aportar a la comunidad mediante trabajo, servicio, recursos o conocimiento útil.</li>
+                <li>Cumplir y respetar las decisiones del Arconte, como máxima autoridad provisional.</li>
+                <li>Defender la paz y rechazar la violencia injustificada.</li>
+                <li>Contribuir al desarrollo económico y social de Hernavia mediante la productividad y el esfuerzo propio.</li>
+                <li>Respetar los símbolos de Hernavia como expresión de identidad común.</li>
+                <li>Proteger y apoyar a su comunidad en situaciones de crisis o emergencia.</li>
+            </ol>
 
-        <h3>Artículo 4 – Identidad y Objetivos Iniciales</h3>
-        <p>
-            La bandera y demás símbolos serán definidos por el Arconte y reconocidos provisionalmente
-            como representación de la identidad hernaviana, con su lema “Paz, naturaleza, innovación”
-            y la frase “Nacidos de un sueño, luchando por cumplirlo”.
-        </p>
-        <p>Los objetivos iniciales de Hernavia serán:</p>
-        <ol>
-            <li>Fortalecer la unión y crecimiento de la comunidad hernaviana.</li>
-            <li>Desarrollar una base económica autosuficiente, iniciando con la producción de alimentos y recursos propios.</li>
-            <li>Establecer mecanismos de organización interna simples pero efectivos bajo la guía del Arconte.</li>
-            <li>Promover la educación cívica, la innovación y el respeto a la naturaleza.</li>
-        </ol>
+            <h3>Artículo 4 – Identidad y Objetivos Iniciales</h3>
+            <p>
+                La bandera y demás símbolos serán definidos por el Arconte y reconocidos provisionalmente
+                como representación de la identidad hernaviana, con su lema “Paz, naturaleza, innovación”
+                y la frase “Nacidos de un sueño, luchando por cumplirlo”.
+            </p>
+            <p>Los objetivos iniciales de Hernavia serán:</p>
+            <ol>
+                <li>Fortalecer la unión y crecimiento de la comunidad hernaviana.</li>
+                <li>Desarrollar una base económica autosuficiente, iniciando con la producción de alimentos y recursos propios.</li>
+                <li>Establecer mecanismos de organización interna simples pero efectivos bajo la guía del Arconte.</li>
+                <li>Promover la educación cívica, la innovación y el respeto a la naturaleza.</li>
+            </ol>
 
-        <h3>Artículo 5 – Carácter Transitorio</h3>
-        <p>
-            Esta Carta es un documento provisional. Podrá ser modificada en el futuro a medida que Hernavia
-            crezca y se fortalezca, por decisión del Arconte o mediante una futura Constitución establecida
-            con la participación del pueblo.
-            Toda acción deberá respetar esta Carta, las leyes de Hernavia que se promulguen posteriormente,
-            y las leyes del país donde se encuentre el ciudadano.
-        </p>
+            <h3>Artículo 5 – Carácter Transitorio</h3>
+            <p>
+                Esta Carta es un documento provisional. Podrá ser modificada en el futuro a medida que Hernavia
+                crezca y se fortalezca, por decisión del Arconte o mediante una futura Constitución establecida
+                con la participación del pueblo.
+                Toda acción deberá respetar esta Carta, las leyes de Hernavia que se promulguen posteriormente,
+                y las leyes del país donde se encuentre el ciudadano.
+            </p>
 
-        <h3>Artículo 6 – Símbolos</h3>
-        <h4>Bandera</h4>
-      <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera" width="300" height="200">
-        <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
+            <h3>Artículo 6 – Símbolos</h3>
+            <h4>Bandera</h4>
+            <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera">
+            <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
 
-        <p><strong>Arconte fundador:</strong> Hernán Coronado.</p>
-    </section>
+            <p><strong>Arconte fundador:</strong> Hernán Coronado.</p>
+        </section>
+    </main>
 
     <footer>
         &copy; 2025 Hernavia - Proyecto Cultural
     </footer>
 </body>
 </html>
+
