--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Nav incrustado -->
     <nav class="nav-comun">
         <a href="index.html">Inicio</a>
-        <a href="Documentos.html">Documentos</a>
+        <a href="documentos.html">Documentos</a>
         <a href="noticias.html">Noticias</a>
         <a href="proyectos.html">Proyectos</a>
         <a href="simbolos.html">Símbolos</a>
@@ -66,3 +66,4 @@
 
 </body>
 </html>
+
