--- a/documentos.html
+++ b/documentos.html
@@ -36,14 +36,15 @@
             <p>En ella se establece al Arconte como máxima autoridad, encargado de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan instituciones más amplias. También recoge los principios fundamentales, como el respeto entre ciudadanos, el cuidado de la naturaleza, la participación activa, la búsqueda de innovación y la fraternidad con otras culturas.</p>
             <p>Además, describe las obligaciones de los ciudadanos, que incluyen aportar al desarrollo de la comunidad, respetar las decisiones colectivas, defender la paz y contribuir al progreso común. Señala también objetivos iniciales como impulsar la innovación, proteger el medio ambiente, fomentar la educación cívica y promover un desarrollo económico propio.</p>
             <p>La Carta dedica un espacio a los símbolos de Hernavia, en especial la bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. Finalmente, aclara que se trata de un documento transitorio que podría transformarse en un futuro en una carta más completa.</p>
-            <a href="carta.html" class="boton-hernavia">Leer carta completa</a>
+            <a href="carta.html" class="boton">Leer carta completa</a>
         </section>
 
         <section class="section">
             <h2>Leyes Transitorias</h2>
             <p>Las Leyes Transitorias de Hernavia son un conjunto de normas provisionales que guían el funcionamiento de la comunidad mientras se consolida la organización. Establecen cómo se puede revocar la ciudadanía, el aporte obligatorio de cada ciudadano, las penalizaciones por incumplimiento, la participación en votaciones y asambleas, la administración de fondos y la eliminación de datos personales en casos de renuncia.</p>
             <p>Estas leyes buscan mantener la unidad, proteger la naturaleza, fomentar la innovación y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, siempre respetando los principios de respeto, paz, innovación y unión.</p>
-            <a href="leyes.html" class="boton-hernavia">Leer las leyes completas</a>
+         <a href="leyes.html" class="boton">Leer las leyes completas</a>
+
         </section>
     </main>
 
