--- a/carta.html
+++ b/carta.html
@@ -47,7 +47,7 @@
     <!-- Nav incrustado -->
     <nav class="nav-comun">
         <a href="index.html">Inicio</a>
-        <a href="Documentos.html">Documentos</a>
+        <a href="documentos.html">Documentos</a>
         <a href="noticias.html">Noticias</a>
         <a href="proyectos.html">Proyectos</a>
         <a href="simbolos.html">Símbolos</a>
