--- a/leyes.html
+++ b/leyes.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leyes Transitorias de Hernavia</title>
+    <meta name="description" content="Descubre las Leyes Transitorias de Hernavia, que regulan la ciudadanía y el funcionamiento de la comunidad.">
+
+    <!-- CSS -->
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
-    <meta name="description" content="Descubre las Leyes Transitorias de Hernavia, que regulan la ciudadanía y el funcionamiento de la comunidad.">
+
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Proyecto Hernavia">
 </head>
 <body>
 
@@ -24,6 +29,7 @@
         });
 </script>
 
+<main>
 <section class="section">
     <h2>Ley 1 – Revocación de Ciudadanía Hernaviana</h2>
     <p>Un ciudadano podrá perder su ciudadanía de forma temporal o definitiva si incurre en alguno de los siguientes casos:</p>
@@ -83,6 +89,7 @@
 
     <p><strong>Nota final:</strong> El Arconte podrá interpretar o modificar cualquier disposición de estas Leyes Transitorias y demás documentos de Hernavia, siempre respetando los principios de respeto, paz, innovación y unión, con el propósito de garantizar la seguridad y estabilidad de Hernavia.</p>
 </section>
+</main>
 
 <footer>
     &copy; 2025 Hernavia - Proyecto Cultural
@@ -90,4 +97,3 @@
 
 </body>
 </html>
-
