--- a/noticias.html
+++ b/noticias.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noticias de Hernavia</title>
-    <meta name="description" content="Últimas noticias y novedades de Hernavia, la identidad colombiana que une creatividad, comunidad y cultura.">
+    <title>Noticias - Hernavia</title>
+    <meta name="description" content="Últimas noticias y novedades de Hernavia, cultura y comunidad.">
     <link rel="icon" type="image/png" href="favicono.png">
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
 </head>
-
 <body>
 
 <header>
     <h1>Noticias de Hernavia</h1>
 </header>
 
-<!-- Nav incrustado -->
+<!-- Nav incrustado como en index.html -->
 <nav class="nav-comun">
     <a href="index.html">Inicio</a>
     <a href="documentos.html">Documentos</a>
@@ -32,7 +31,7 @@
 
 <main>
     <section class="section">
-        <h2>Últimas noticias</h2>
+        <h2>Últimas Noticias</h2>
         <div class="ups">
             Ups… este apartado no tiene información por ahora, espera a que se actualice.
         </div>
