--- a/noticias.html
+++ b/noticias.html
@@ -17,7 +17,6 @@
     <h1>Noticias de Hernavia</h1>
 </header>
 
-<!-- Nav incrustado como en index.html -->
 <nav class="nav-comun">
     <a href="index.html">Inicio</a>
     <a href="documentos.html">Documentos</a>
@@ -31,10 +30,7 @@
 
 <main>
     <section class="section">
-        <h2>Últimas Noticias</h2>
-        <div class="ups">
-            Ups… este apartado no tiene información por ahora, espera a que se actualice.
-        </div>
+        <div class="ups">Ups… este apartado no tiene información por ahora, espera a que se actualice.</div>
     </section>
 </main>
 
