--- a/noticias.html
+++ b/noticias.html
@@ -3,18 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noticias - Hernavia</title>
-    <meta name="description" content="Últimas noticias y novedades de Hernavia, cultura y comunidad.">
+    <title>Proyectos - Hernavia</title>
+    <meta name="description" content="Explora los proyectos de Hernavia, iniciativas culturales y comunitarias que construyen identidad y bienestar.">
     <link rel="icon" type="image/png" href="favicono.png">
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
+    <style>
+        .ups {
+            text-align: center;
+            color: #777; 
+            font-size: 1.2em;
+            font-style: italic;
+            margin-top: 40px;
+        }
+    </style>
 </head>
 <body>
 
 <header>
-    <h1>Noticias de Hernavia</h1>
+    <h1>Proyectos de Hernavia</h1>
 </header>
 
 <nav class="nav-comun">
