--- a/proyectos.html
+++ b/proyectos.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyectos - Hernavia</title>
-    <meta name="description" content="Explora los proyectos de Hernavia, iniciativas culturales y comunitarias que construyen identidad y bienestar.">
+    <title>Noticias - Hernavia</title>
+    <meta name="description" content="Explora las noticas sobre Hernavia, con los hechos mas importantes que pasen.">
     <link rel="icon" type="image/png" href="favicono.png">
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Proyecto Hernavia">
+    <meta name="author" content="Noticias Hernavia">
     <style>
         .ups {
             text-align: center;
-            color: gray;
+            color: #777; 
             font-size: 1.2em;
-            margin-top: 30px;
+            font-style: italic;
+            margin-top: 40px;
         }
     </style>
 </head>
 <body>
 
 <header>
-    <h1>Proyectos de Hernavia</h1>
+    <h1>Noticias de Hernavia</h1>
 </header>
 
-<!-- Nav incrustado -->
 <nav class="nav-comun">
     <a href="index.html">Inicio</a>
     <a href="documentos.html">Documentos</a>
