--- a/noticias.html
+++ b/noticias.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noticias - Hernavia</title>
-    <meta name="description" content="Explora las noticas sobre Hernavia, con los hechos mas importantes que pasen.">
+    <meta name="description" content="Mantente informado sobre las noticias y eventos de Hernavia.">
     <link rel="icon" type="image/png" href="favicono.png">
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Noticias Hernavia">
+    <meta name="author" content="Proyecto Hernavia">
     <style>
         .ups {
             text-align: center;
-            color: #777; 
+            color: #777; /* gris estándar */
             font-size: 1.2em;
             font-style: italic;
             margin-top: 40px;
@@ -26,6 +26,7 @@
     <h1>Noticias de Hernavia</h1>
 </header>
 
+<!-- Nav incrustado -->
 <nav class="nav-comun">
     <a href="index.html">Inicio</a>
     <a href="documentos.html">Documentos</a>
