--- a/noticias.html
+++ b/noticias.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noticias - Hernavia</title>
-    <meta name="description" content="Mantente informado sobre las noticias y eventos de Hernavia.">
+    <meta name="description" content="Mantente informado sobre las noticias mas importantes de Hernavia.">
     <link rel="icon" type="image/png" href="favicono.png">
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Proyecto Hernavia">
+    <meta name="author" content="Noticias Hernavia Hernavia">
     <style>
         .ups {
             text-align: center;
-            color: #777; /* gris estándar */
+            color: #333; 
             font-size: 1.2em;
             font-style: italic;
             margin-top: 40px;
+        }
+        section.section {
+            background-color: #fff;
+            border-left: 8px solid #006A44;
+            border-radius: 10px;
+            padding: 20px;
+            max-width: 900px;
+            margin: 20px auto;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
     </style>
 </head>
@@ -26,7 +35,6 @@
     <h1>Noticias de Hernavia</h1>
 </header>
 
-<!-- Nav incrustado -->
 <nav class="nav-comun">
     <a href="index.html">Inicio</a>
     <a href="documentos.html">Documentos</a>
